--- a/index.html
+++ b/index.html
@@ -2,10 +2,37 @@
 <html>
 <head>
     <title>Parkavan | Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #0f172a;
+            color: white;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            font-size: 40px;
+        }
+        p {
+            font-size: 18px;
+            color: #cbd5e1;
+        }
+        .btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background: #38bdf8;
+            color: black;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
     <h1>Hello, I'm Parkavan 👋</h1>
     <p>Aspiring Web & AI Developer</p>
-    <p>I started coding from 5th standard and I love building things with tech.</p>
+    <p>I started coding in 5th standard and love building tech projects.</p>
+
+    <a href="https://github.com/YOURUSERNAME" class="btn">View My GitHub</a>
 </body>
 </html>
